trying to get .gitlab-ci.yml to work